# hse_game_of_life

./: CMakeLists.txt  Doxyfile  README.md
src/: game_of_life.cpp  game_of_life.h  game_of_life_test.cpp  main.cpp
